<resources>
    <string name="app_name">Living Streams Devotional</string>
    <string name="devotional">Devotionals</string>
    <string name="events">Events</string>
    <string name="nuggets">Nuggets</string>
    <string name="nugget">Nugget</string>
    <string name="action_point">Action Points</string>
    <string name="prayer">Prayer</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="register">Register</string>
    <string name="register_an_admin">Register An Admin</string>
    <string name="sign_in">sign in</string>
    <string name="today_s_nugget">Today\'s Nuggets</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="add_button">add button</string>
    <string name="archive">Archive</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="devotional_archive">Devotional Archive</string>
</resources>