<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_devotional">

    <fragment
        android:id="@+id/navigation_nuggets"
        android:name="com.ghor.livingstreamsdevotional.ui.nuggets.NuggetsFragment"
        android:label="@string/nuggets"
        tools:layout="@layout/fragment_nuggets" />

    <fragment
        android:id="@+id/navigation_devotional"
        android:name="com.ghor.livingstreamsdevotional.ui.devotional.DevotionalFragment"
        android:label="@string/devotional"
        tools:layout="@layout/fragment_devotional" />

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.ghor.livingstreamsdevotional.ui.events.EventsFragment"
        android:label="@string/events"
        tools:layout="@layout/fragment_events" />
    <fragment
        android:id="@+id/navigation_archive"
        android:name="com.ghor.livingstreamsdevotional.ui.archive.ArchiveFragment"
        android:label="@string/archive"
        tools:layout="@layout/fragment_archive" />
</navigation>