<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/authentication">

    <fragment
        android:id="@+id/navigation_nugget_admin"
        android:name="com.ghor.livingstreamsdevotional.ui.adminnugget.NuggetAdminFragment"
        android:label="@string/nuggets"
        tools:layout="@layout/fragment_admin_nugget" />

    <fragment
        android:id="@+id/navigation_devotional_admin"
        android:name="com.ghor.livingstreamsdevotional.ui.admindevotional.DevotionalAdminFragment"
        android:label="@string/devotional"
        tools:layout="@layout/fragment_admin_devotional" />

    <fragment
        android:id="@+id/navigation_event_admin"
        android:name="com.ghor.livingstreamsdevotional.ui.adminevent.EventAdminFragment"
        android:label="@string/events"
        tools:layout="@layout/fragment_admin_event" />

    <fragment
        android:id="@+id/authentication"
        android:name="com.ghor.livingstreamsdevotional.ui.adminauthentication.AuthenticationFragment"
        android:label="Authentication"
        tools:layout="@layout/authentication_fragment">
        <action
            android:id="@+id/action_authentication_to_navigation_devotional_admin"
            app:destination="@id/navigation_devotional_admin"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/authentication"
            app:popUpToInclusive="true"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
</navigation>